<?xml version="1.0"?>
<package format="2">
  <name>u2dar_receiver</name>
  <version>0.0.0</version>
  <description>U2DAR Receiver for RPi5</description>

  <maintainer email="vrba.vojtech@fel.cvut.cz">Vojtech Vrba</maintainer>

  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

</package>
